force-app/main/default/objects/Contact/fields/My_Third_Field__c.field-meta.xml
<CustomField>
    <fullName>My_Third_Field__c</fullName>
    <label>My Third Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>