force-app/main/default/objects/Contact/fields/MyFirstField__c.field-meta.xml
<CustomField>
    <fullName>MyFirstField__c</fullName>
    <label>My First Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>